# jw_playground

./: .gitignore  Makefile  README.md
cpp/: Makefile  asm.cpp  avx.cpp  ccache_test.cpp  finite.cpp  float.cpp  init.cpp  int4_unpack.cpp  move.cpp  optional.cpp  thread_pool.cpp
cuda/: CMakeLists.txt  Makefile  README.md  bw.md  cache.cu  coalesce.cu  collatz.cu  common.h  conv.cu  cp_async.cu  cuda_graph.cu  float4.cu  fuse.cu  gemm.cu  gemm_bias_gelu.cu  hgemm.cu  hgemm_llm.cu  hgemv.cu  ipc_ag.cu  loop.cu  memcpy.cu  noop.cu  reduce_sum.cu  reduce_sum_dim.cu  sched.cu  sgemm.cu  sgemm_plot.py  sgemv.cu  sm_sched.cu  softmax.cu  sort.cu  transpose.cu  vote.cu
cuda/basics/: adder.cu  hello.cu
dev/: .env  README.md  compose.yaml
hf/: deepseek_demo.py  llama_demo.py  t5_demo.py
llm/: chat.py  chat.sh
py/: abstract.py  ast_play.py  async_demo.py  breakpoint.py  contextlib_demo.py  exception_demo.py  exit_stack.py  gil.py  inherit.py  learn_mock.py  line_prof.py  tenacity_demo.py  thread_demo.py
pytorch/: comm_overlap.py  device_mesh.py  dist_all2all.py  dist_grad.py  dist_ops.py  flash_attn_demo.py  fsdp_ulysses.py  gemm_diff.py  grad_ckpt.py  launch_queue.py  liger.py  log_softmax_gather.py  mem_lab.py  mem_prof.py  memory_efficient_mlp.py  multi_stream.py  nsys_nvtx.py  perf_gpu.py  pin_memory.py  rand_seed.py  safe_tensor_test.py  shared_prefix.py  sp_demo.py  tensor_dict_trial.py  tensor_shape.py  tp_demo.py
pytorch/custom_op/: README.md
pytorch/timeline/: README.md
ray/: 04_fault_tolerance.py  actor.py  actor_gpu.py  load_balance.py  map_dataset.py  map_dataset_gpu.py  serve_client.py  serve_hf.py  serve_hf_fastapi.py  serve_vllm.py  serve_vllm_oai.py  task.py  worker_group.py
rust/adder/src/: lib.rs
rust/gemm/: .gitignore  Cargo.toml  gemm.cpp
rust/hello_web/: Cargo.toml
rust/llm_client/: .env.example  Cargo.toml
rust/llm_client/src/: main.rs
rust/llm_proxy/: Cargo.toml
rust/llm_proxy/config/: default.toml.example
rust/llm_proxy/src/: main.rs
triton/: README.md  adder.py  adder_simple.py  matmul_simple.py  simple_adder.py  softmax.py
ts/: README.md  async_vs_callback.ts  package-lock.json  package.json
(+24 files in other folders)
