[package]
name = "llm_client"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
futures = "0.3.31"
eventsource-stream = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
