[package]
name = "llm_proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.6"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48.0", features = ["full"] }
dotenv = "0.15"
mime = "0.3.17"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
config = "0.15.18"
tower-http = { version = "0.6.6", features = ["trace"] }
clap = { version = "4.5.51", features = ["derive"] }
